# SLAM_IT

./: .gitignore  README.md
Firmware/RPi/SPI_Camera/: run_Arducam_Demo
Firmware/RPi/SPI_Camera/src/: .bcm283x_board_driver.c.swp  ArduCAM.c  ArducamDemo.c  ArducamDemo.c.bak  bcm283x_board_driver.c
Mobile/Camera2Raw/: .gitignore
Mobile/Camera2Raw/Application/: build.gradle
Mobile/Camera2Raw/Application/src/main/: AndroidManifest.xml
Mobile/Camera2Raw/Application/src/main/java/com/example/android/camera2raw/: Camera2RawFragment.java
Mobile/Camera2Raw/gradle/wrapper/: gradle-wrapper.properties
Mobile/app/: build.gradle
Mobile/app/src/androidTest/java/drexel/ece/group13/slam_it/: ExampleInstrumentedTest.kt
Mobile/app/src/main/: AndroidManifest.xml
Mobile/app/src/main/cpp/: native-lib.cpp
Mobile/app/src/main/java/drexel/ece/group13/slam_it/: MainActivity.kt
Mobile/app/src/main/res/values/: strings.xml
Mobile/app/src/test/java/drexel/ece/group13/slam_it/: ExampleUnitTest.kt
Mobile/gradle/wrapper/: gradle-wrapper.properties
cal/: CMakeLists.txt  helper.txt
cal/dat/10.0.0.176/: run2.pcd  run4.pcd
cal/dat/10.0.0.97/: run1.pcd  run2.pcd
cal/dat/ascii/: kitchen1.pcd  kitchen2s.pcd  steveroom.pcd
cal/dat/filt/: cloud_inliers.pcd  cloud_outliers.pcd  hall1.pcd  phone.pcd  phone2.pcd  phone_cp.pcd  phone_r.pcd  room3.pcd  table.pcd  table1.pcd  table2.pcd  table2_c.pcd
cal/dat/fuse_dataset/: Mark Run2.pcd  Mark Run3.pcd  Mark Run4.pcd  Mark Run5.pcd  Run5.pcd  run3.pcd
cal/dat/match/: MarkRunToRun5.txt  Run5_cam.txt  Run5_cam2.txt  run3ToRun5.txt  table1_c.pcd  table2_c.pcd
cal/dat/pcl/: base1.pcd  hall.pcd  hall2.pcd  hall3.pcd  kitchen1.pcd  kitchen1s.pcd  kitchen2.pcd  kitchen2s.pcd  output.pcd  phone.pcd  phone1.pcd  phone2.pcd  phone_cp.pcd  phone_dens.pcd  phone_r.pcd  room.pcd  room1.pcd  room2.pcd  room3.pcd  steveroom.pcd  table.pcd  table1.pcd  table1_c.pcd  table1n.pcd  table1nr.pcd  table2.pcd  vicon_1_2_2r_v2.pcd  vicon_1_2_2r_v2d.pcd  vicon_1_2_v2.pcd  vicon_1_2_v2d.pcd
cal/dat/raw/: hall1_frames.txt  hall1_pos.txt  hall2_frames.txt  hall2_pos.txt  hall3_frames.txt  hall3_pos.txt  hall_frames.txt  hall_pos.txt  phone1_frames.txt  phone1_pos.txt  phone2_frames.txt  phone2_points.txt  phone2_pos.txt  phone_cp_frames.txt  phone_frames.txt  phone_points.txt  phone_r_frames.txt  room1_frames.txt  room1_pos.txt  room2_frames.txt  room2_pos.txt  room3_frames.txt  room3_pos.txt  room_frames.txt  room_pos.txt  table1_c_frames.txt  table1_c_pos.txt  table2_c_frames.txt  table2_frames.txt  table2_pos.txt  table_frames.txt  table_points.txt
cal/src/: Data_Converter.cpp  Demo.cpp  Fuse.cpp  Fuse.h  Fuse_help.cpp  Fuse_help.h  camera_calibration.cpp  edge_det.cpp  edge_det.h  fuse_pars.yaml  iter_fuse.cpp  main3.cpp  outlier3.cpp  plane_maker.cpp  sift_keypoint.cpp  sift_keypoint.h  sift_keypoint.hpp  slam_converter.cpp  triangle3.cpp  uncompressor.cpp
cal/src/Converter/: PCHelp.cpp  PCHelp.h  pch.h
server/src/: README.md  main.go
slam_it/: CMakeLists.txt
slam_it/src/: main.cpp
slam_it/src/coder/: base64.h  tester.cpp
vidso/: CMakeLists.txt  helper.txt  mark_camera.txt  sean_camera.txt  steve_camera.txt  tim_camera.txt
vidso/src/: main_dso_pangolin.cpp
vidso/src/FullSystem/: FullSystem.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h
vidso/src/IOWrapper/: Output3DWrapper.h
vidso/src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
vidso/src/IOWrapper/OutputWrapper/: CustomWrapper.h  PCLWrapper.h
vidso/src/IOWrapper/Pangolin/: PangolinDSOViewer.cpp  PangolinDSOViewer.h
vidso/src/util/: DatasetReader.h  ImageAndExposure.h  Undistort.cpp  Undistort.h  settings.cpp  settings.h
viewer/: CMakeLists.txt
viewer/src/: camera_calibration.cpp  in_VID5.xml  main3.cpp  main_view.cpp  mels3.cpp  mls3.cpp  outlier3.cpp  triangle3.cpp
